# GraficoComAvalicaoDeExpressao

./: .gitignore  CMakeLists.txt  README.md  batata.cpp  main.cpp  main2.cpp  rubens.bash  test.cpp
